fix: improve desktop padding alignment for services section

--- a/partials/_services.scss
+++ b/partials/_services.scss
@@ -3,7 +3,11 @@
     margin-top: 80px;
     padding: 48px 24px;
     border-radius: 15px;
-    color: $white-normal;    
+    color: $white-normal;
+
+    @media screen and (min-width: 900px) {
+        padding: 64px 80px; // Cria um recuo lateral elegante no desktop
+    }
 
     &-title {
         display: flex;
@@ -57,8 +61,7 @@
         display: flex;
         flex-direction: column;
         gap: 32px;
-        max-width: 1000px;
-        margin: 0 auto;
+        width: 100%;
 
         @media screen and (min-width: 900px) {
             flex-direction: row;
